--- a/css/default.css
+++ b/css/default.css
@@ -39,14 +39,14 @@ h2 {
 	width: 960px;
 }
 #headerRow {
-	background: #4f4f4f; /* Old browsers */
-	background: -moz-linear-gradient(top,  #4f4f4f 0%, #262626 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4f4f4f), color-stop(100%,#262626)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #4f4f4f 0%,#262626 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #4f4f4f 0%,#262626 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #4f4f4f 0%,#262626 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #4f4f4f 0%,#262626 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f4f4f', endColorstr='#262626',GradientType=0 ); /* IE6-9 */
+	background: #000000; /* Old browsers #4f4f4f */ 
+	background: -moz-linear-gradient(top,  #000000 0%, #000000 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#000000)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #000000 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #000000 0%,#000000 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #000000 0%,#000000 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #000000 0%,#000000 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 	height: 64px;
 }
 #contentRow {
@@ -123,7 +123,7 @@ h2 {
 #headerRow DIV.container UL LI A:hover,
 #headerRow DIV.container UL LI A.on {
 	background-color: #fd9a0d;
-	color: #262626;
+	color: #262626;  /*#262626 */
 }
 
 
