--- a/css/default.css
+++ b/css/default.css
@@ -38,6 +38,12 @@ h2 {
 	margin: 0 auto;						/* float container in middle of screen */
 	width: 960px;
 }
+
+.container1 {
+	margin: 0 auto;						/* float container in middle of screen */
+	width: 1080px;
+}
+
 #headerRow {
 	background: #000000; /* Old browsers #4f4f4f */ 
 	background: -moz-linear-gradient(top,  #000000 0%, #000000 100%); /* FF3.6+ */
