--- a/Test/assets/sass/main.scss
+++ b/Test/assets/sass/main.scss
@@ -1,69 +1,56 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
+@import 'libs/vendor';
+@import 'libs/breakpoints';
+@import 'libs/html-grid';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic');
 
 /*
-	Identity by HTML5 UP
+	Solid State by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-	@include skel-breakpoints((
-		xlarge: '(max-width: 1680px)',
-		large: '(max-width: 1280px)',
-		medium: '(max-width: 960px)',
-		small: '(max-width: 736px)',
-		xsmall: '(max-width: 480px)',
-		xxsmall: '(max-width: 360px)'
+// Breakpoints.
+
+	@include breakpoints((
+		xlarge:    (1281px,   1680px   ),
+		large:     (981px,    1280px   ),
+		medium:    (737px,    980px    ),
+		small:     (481px,    736px    ),
+		xsmall:    (361px,    480px    ),
+		xxsmall:   (null,     360px    )
 	));
-
-	@include skel-layout((
-		reset: 'full',
-		boxModel: 'border'
-	));
-
-	@mixin icon-alt($content: false, $link: false) {
-		@include icon($content);
-		$size: _size(border-width) * 1.25;
-
-		&:before {
-			color: _palette(bg);
-			text-shadow: $size 0px 0px _palette(border),
-						($size * -1) 0px 0px _palette(border),
-						0px $size 0px _palette(border),
-						0px ($size * -1) 0px _palette(border);
-
-		}
-
-		@if $link {
-			&:hover {
-				&:before {
-					text-shadow: $size 0px 0px _palette(highlight),
-								($size * -1) 0px 0px _palette(highlight),
-								0px $size 0px _palette(highlight),
-								0px ($size * -1) 0px _palette(highlight);
-				}
-			}
-		}
-	}
 
 // Base.
 
+	@import 'base/reset';
 	@import 'base/page';
 	@import 'base/typography';
 
 // Component.
 
+	@import 'components/row';
+	@import 'components/section';
 	@import 'components/form';
+	@import 'components/box';
 	@import 'components/icon';
+	@import 'components/image';
 	@import 'components/list';
+	@import 'components/actions';
+	@import 'components/icons';
+	@import 'components/contact';
+	@import 'components/pagination';
+	@import 'components/table';
 	@import 'components/button';
+	@import 'components/features';
 
 // Layout.
 
-	@import 'layout/main';
-	@import 'layout/footer';
+	@import 'layout/header';
+	@import 'layout/menu';
+	@import 'layout/banner';
 	@import 'layout/wrapper';
+	@import 'layout/footer';
